--- a/housing/templates/housing/housing_index.html
+++ b/housing/templates/housing/housing_index.html
@@ -70,7 +70,7 @@
                 <div class="col-sm-2 body-text">
                   <div class="form-group">
                     <label for="paginator">Page</label>
-                    <select class="form-control form-control-sm" id="paginator" name="page">
+                    <select class="form-control form-control-sm small-width" id="paginator" name="page">
                       <option value="1">1</option>
                     </select>
                   </div>
