--- a/housing/templates/housing/housing_index.html
+++ b/housing/templates/housing/housing_index.html
@@ -58,7 +58,7 @@
                     <div class="form-check">
                         <input class="form-check-input checkbox-large" type="checkbox" value="" id="show_viewed"
                                name="show_viewed">
-                        <label class="form-check-label col-form-label-sm" for="show_viewed">Show Viewed</label>
+                        <label class="form-check-label col-form-label-sm" for="show_viewed">Exclude Viewed</label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input checkbox-large" type="checkbox" value="" id="show_liked"
