extract filtered list into mixin class

--- a/foodtrack/templates/food-purchase-list.html
+++ b/foodtrack/templates/food-purchase-list.html
@@ -14,10 +14,10 @@
                             {{ form.store_name|as_crispy_field }}
                         </div>
                         <div class="col">
-                            {{ form.date_start|as_crispy_field }}
+                            {{ form.dt_start|as_crispy_field }}
                         </div>
                         <div class="col">
-                            {{ form.date_end|as_crispy_field }}
+                            {{ form.dt_end|as_crispy_field }}
                         </div>
                     </div>
             </div>
