--- a/foodtrack/templates/layout.html
+++ b/foodtrack/templates/layout.html
@@ -35,8 +35,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Purchase</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'foodtrack-purchase' %}" role="button">New Purchase</a>
+                        <a class="dropdown-item" href="{% url 'foodtrack-purchase' %}" role="button">New</a>
                         <a class="dropdown-item" href="{% url 'foodtrack-purchase-list' %}" role="button">List</a>
+                        <a class="dropdown-item" href="{% url 'foodtrack-purchase-summary' %}" role="button">Summary</a>
 
                     </div>
                 </li>
