purchase summary tests

--- a/foodtrack/templates/food-purchase-summary.html
+++ b/foodtrack/templates/food-purchase-summary.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
-{% load currency_conversions %}
+{% load converters %}
 {% block content %}
         <form method="get">
         <div class="row justify-content-center pl-md-5 pr-md-5 ml-md-5 mr-md-5">
