[react] implemented login/logout from react front-end

--- a/foodtrack/templates/layout.html
+++ b/foodtrack/templates/layout.html
@@ -41,6 +41,12 @@
 
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Food Log</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'foodtrack-log-newentry' %}" role="button">New Entry</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav>
